# stremio-linux-shell

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  PKGBUILD  README-old.md  README.md  RELEASE.md  TEST-GUIDE.md  build.rs  com.stremio.App.Devel.json  com.stremio.Client.Devel.json  com.stremio.Stremio.Devel.json  install.sh  run-stremio.sh  stremio-enhanced.desktop
.github/: RELEASE_TEMPLATE.md
.github/workflows/: appimage-release.yml  build.yml  release.yml  test-appimage.yml
data/: com.stremio.Client.desktop  com.stremio.Client.metainfo.xml  com.stremio.Stremio.desktop  com.stremio.Stremio.metainfo.xml
data/mpv-configs/: input.conf  mpv.conf
data/mpv-configs/script-opts/: thumbfast.conf
flatpak/: build.sh  com.stremio.Stremio.Devel.json
locales/: en.yml  es.yml  fr.yml
src/: config.rs  constants.rs  discord.rs  gpu.rs  instance.rs  ipc.rs  main.rs  server.rs  tray.rs
src/app/: mod.rs
src/player/: config.rs  constants.rs  mod.rs
src/shared/: mod.rs  types.rs
src/shared/renderer/: mod.rs
src/webview/: adapters.rs  constants.rs  mod.rs  preload.js
src/webview/app/: mod.rs  render_process_handler.rs  utils.rs  v8_handler.rs
src/webview/app/client/: display_handler.rs  keyboard_handler.rs  lifespan_handler.rs  load_handler.rs  mod.rs  render_handler.rs
