[package]
name = "stremio-linux-shell"
authors = ["Stremio"]
version = "1.0.0-beta.11"
description = "Freedom to Stream"
edition = "2024"
license = "GPL-3.0-only"

[features]
offline-build = []

[dependencies]
anyhow = "1.0.98"
ashpd = { version = "0.11.0", features = ["async-std", "raw-window-handle", "raw_handle", "wayland"], default-features = false }
bytes = "1.10.1"
cef = { version = "138.0.21", git = "https://github.com/Stremio/cef-rs" }
cef-dll-sys = { version = "138.0.21", git = "https://github.com/Stremio/cef-rs" }
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
futures = "0.3.31"
gl = "0.14.0"
glutin = { git = "https://github.com/Stremio/glutin", branch = "feat/wayland-file-window-events" }
glutin-winit = { git = "https://github.com/Stremio/glutin", branch = "feat/wayland-file-window-events" }
gtk = "0.18.2"
image = "0.25.6"
itertools = "0.14.0"
libc = "0.2.174"
libmpv2 = { git = "https://github.com/Stremio/libmpv2-rs" }
once_cell = "1.21.3"
paste = "1.0.15"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
rust-i18n = "3.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tray-icon = { version = "0.20.1", default-features = false }
url = "2.5.4"
winit = { git = "https://github.com/Stremio/winit", branch = "feat/wayland-file-window-events" }

[build-dependencies]
anyhow = "1.0.98"
bzip2 = "0.6.0"
dircpy = "0.3.19"
globset = "0.4.16"
serde = "1.0.219"
tar = "0.4.44"
toml = "0.8.23"
ureq = { version = "3.0.12", features = ["json"] }

